Topics controller Auth
